Renamed package to bed-rest. Because conflict

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bed",
+  "name": "bed-rest",
   "version": "1.0.0",
   "description": "A REST Client API Generator",
   "main": "index.js",
